# swift-embedded-xiao-esp32c6-expansion_board

./: .gitignore  CMakeLists.txt  README.md  sdkconfig
docs/: SWIFT_GOT_PLT_FIX.md
main/: CMakeLists.txt  Package.resolved  Package.swift  patch_sections_ld.cmake
main/Source/App/: App.swift  ESP32U8g2Driver.swift  OLEDView.swift
main/Source/Support/include/: font.h  i2c.h  module.modulemap  support.h
main/Source/Support/src/: font.c  i2c.c  rtos_utils.c
